--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,14 @@
 
 body {
   height: 100vh;
+  width: 100%; }
+
+.wrap {
+  height: 100%;
   width: 100%;
-  background-color: red; }
+  background-image: url("../img/background.jpg");
+  background-position: center;
+  background-size: cover; }
 
 #output {
   width: 100%;
