--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,45 +1,2 @@
-* {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    height: 100vh;
-    width: 100%;
-}
-
-.wrap{
-    height: 100%;
-    width: 100%;
-    background-image: url("../img/background.jpg");
-    background-position: center;
-    background-size: cover;
-}
-
-#output{
-    width: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-evenly;
-    @media screen and (min-width: 480px) {
-        flex-direction: row;
-    }
-}
-
-.output{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: baseline;
-    background-color: white;
-    flex: 1 0 25%;
-    padding: 10px;
-    @media screen and (min-width: 480px) {
-    flex-direction: column;
-}
-}
+@import "./partials/reset";
+@import "./partials/layout";
