--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script:700|Oswald");
+body {
+  font-family: 'Oswald', sans-serif;
+  font-size: 36px;
+  color: #5d4d4d; }
+
+h1 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 96px;
+  color: white;
+  text-shadow: 2px 2px 10px black;
+  text-align: center; }
+
 * {
   top: 0;
   right: 0;
