--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -15,7 +15,7 @@ body{
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     @media screen and (min-width: 480px) {
         flex-direction: row;
     }
@@ -24,12 +24,15 @@ body{
 .output{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: center;
     align-items: baseline;
-    background-color: white;
-    flex: 1 0 25%;
+    background-color: rgba(255, 255, 255, 0.4);
+    flex: 1 0 23%;
+    border-radius: 10px;
     padding: 10px;
+    margin: 5px 10px;
     @media screen and (min-width: 480px) {
     flex-direction: column;
+    align-items: center;
 }
 }
