--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -2,6 +2,7 @@ body{
     font-family: 'Oswald', sans-serif;
     font-size: 36px;
     color: #5d4d4d;
+    text-shadow: 0px 0px 20px white;
 }
 
 h1{
@@ -10,4 +11,15 @@ h1{
     color: white;
     text-shadow: 2px 2px 10px black;
     text-align: center;
+}
+
+span{
+    padding: 5px;
+    flex: 4;
+}
+
+.output > div {
+padding: 5px;
+flex: 3;
+text-align: right;
 }
