--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,8 @@
 body {
   font-family: 'Oswald', sans-serif;
   font-size: 36px;
-  color: #5d4d4d; }
+  color: #5d4d4d;
+  text-shadow: 0px 0px 20px white; }
 
 h1 {
   font-family: 'Dancing Script', cursive;
@@ -10,6 +11,15 @@ h1 {
   color: white;
   text-shadow: 2px 2px 10px black;
   text-align: center; }
+
+span {
+  padding: 5px;
+  flex: 4; }
+
+.output > div {
+  padding: 5px;
+  flex: 3;
+  text-align: right; }
 
 * {
   top: 0;
@@ -35,7 +45,7 @@ body {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-evenly; }
+  justify-content: space-between; }
   @media screen and (min-width: 480px) {
     #output {
       flex-direction: row; } }
@@ -43,13 +53,16 @@ body {
 .output {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  justify-content: center;
   align-items: baseline;
-  background-color: white;
-  flex: 1 0 25%;
-  padding: 10px; }
+  background-color: rgba(255, 255, 255, 0.4);
+  flex: 1 0 23%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px 10px; }
   @media screen and (min-width: 480px) {
     .output {
-      flex-direction: column; } }
+      flex-direction: column;
+      align-items: center; } }
 
 /*# sourceMappingURL=styles.css.map */
