--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,13 @@ body {
   height: 100vh;
   width: 100%; }
 
+#overlay {
+  display: none;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8); }
+
 .wrap {
   height: 100%;
   width: 100%;
