--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -1,4 +1,8 @@
 body{
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     height: 100vh;
     width: 100%;
 }
@@ -20,12 +24,16 @@ body{
 }
 
 #output{
+    position: absolute;
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
+    bottom: 30px;
     @media screen and (min-width: 480px) {
         flex-direction: row;
+        top: 170px;
+        bottom: unset;
     }
 }
 
