--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@ h1 {
   font-size: 96px;
   color: white;
   text-shadow: 2px 2px 10px black;
-  text-align: center; }
+  text-align: center;
+  padding: 10px 0; }
 
 span {
   padding: 5px;
