--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,9 @@ span {
   padding: 5px;
   flex: 3;
   text-align: right; }
+  @media screen and (min-width: 480px) {
+    .output > div {
+      font-size: 72px; } }
 
 * {
   margin: 0;
@@ -33,7 +36,10 @@ body {
   bottom: 0;
   left: 0;
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+  background-image: url("../img/background.jpg");
+  background-position: center;
+  background-size: cover; }
 
 #overlay {
   display: none;
@@ -45,13 +51,13 @@ body {
 .wrap {
   height: 100%;
   width: 100%;
-  background-image: url("../img/background.jpg");
-  background-position: center;
-  background-size: cover; }
+  max-width: 1170px;
+  margin: auto; }
 
 #output {
   position: absolute;
   width: 100%;
+  max-width: 1170px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
@@ -68,7 +74,7 @@ body {
   justify-content: center;
   align-items: baseline;
   background-color: rgba(255, 255, 255, 0.4);
-  flex: 1 0 23%;
+  flex: 0 0 22%;
   border-radius: 10px;
   padding: 10px;
   margin: 5px 10px; }
