--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -5,6 +5,9 @@ body{
     left: 0;
     height: 100vh;
     width: 100%;
+    background-image: url("../img/background.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 #overlay {
@@ -18,14 +21,14 @@ body{
 .wrap{
     height: 100%;
     width: 100%;
-    background-image: url("../img/background.jpg");
-    background-position: center;
-    background-size: cover;
+    max-width: 1170px;
+    margin: auto;
 }
 
 #output{
     position: absolute;
     width: 100%;
+    max-width: 1170px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
@@ -43,7 +46,7 @@ body{
     justify-content: center;
     align-items: baseline;
     background-color: rgba(255, 255, 255, 0.4);
-    flex: 1 0 23%;
+    flex: 0 0 23%;
     border-radius: 10px;
     padding: 10px;
     margin: 5px 10px;
