--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,12 +17,12 @@ span {
   padding: 5px;
   flex: 4; }
 
-.output > div {
+.timeOutput > div {
   padding: 5px;
   flex: 3;
   text-align: right; }
   @media screen and (min-width: 480px) {
-    .output > div {
+    .timeOutput > div {
       font-size: 72px; } }
 
 * {
@@ -68,18 +68,18 @@ body {
       top: 170px;
       bottom: unset; } }
 
-.output {
+.timeOutput {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
   align-items: baseline;
   background-color: rgba(255, 255, 255, 0.4);
-  flex: 0 0 22%;
+  flex: 0 0 23%;
   border-radius: 10px;
   padding: 10px;
   margin: 5px 10px; }
   @media screen and (min-width: 480px) {
-    .output {
+    .timeOutput {
       flex-direction: column;
       align-items: center; } }
 
