--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -25,7 +25,7 @@ body{
     margin: auto;
 }
 
-#output{
+main {
     position: absolute;
     width: 100%;
     max-width: 1170px;
@@ -54,4 +54,21 @@ body{
     flex-direction: column;
     align-items: center;
 }
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-width: 1170px;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    @media screen and (min-width: 480px) {
+        padding: 10px;
+    }
+}
+
+li {
+    display: inline-block;
 }
