--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,10 +11,16 @@ main {
 h1 {
   font-family: 'Dancing Script', cursive;
   font-size: 96px;
+  line-height: 96px;
   color: white;
   text-shadow: 2px 2px 10px black;
   text-align: center;
   padding: 10px 0; }
+  @media screen and (max-height: 600px) {
+    h1 {
+      font-size: 72px;
+      line-height: 72px;
+      padding: 2px; } }
 
 span {
   padding: 5px;
@@ -58,13 +64,18 @@ body {
   background-color: rgba(255, 255, 255, 0.8); }
 
 .wrap {
-  height: 100%;
+  height: 90%;
   width: 100%;
   max-width: 1170px;
-  margin: auto; }
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+  @media screen and (min-width: 480px) {
+    .wrap {
+      height: 70%; } }
 
 main {
-  position: absolute;
   width: 100%;
   max-width: 1170px;
   display: flex;
