--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -19,14 +19,19 @@ body{
 }
 
 .wrap{
-    height: 100%;
+    height: 90%;
     width: 100%;
     max-width: 1170px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    @media screen and (min-width: 480px) {
+        height: 70%;
+    }
 }
 
 main {
-    position: absolute;
     width: 100%;
     max-width: 1170px;
     display: flex;
