--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -12,10 +12,16 @@ main {
 h1{
     font-family: 'Dancing Script', cursive;
     font-size: 96px;
+    line-height: 96px;
     color: white;
     text-shadow: 2px 2px 10px black;
     text-align: center;
     padding: 10px 0;
+    @media screen and (max-height: 600px) {
+        font-size: 72px;
+        line-height: 72px;
+        padding: 2px;
+    }
 }
 
 span{
